<resources>
    <string name="app_name">RideWave</string>

    <string name="signup_now">Signup now</string>
    <string name="create_rider_account">Create Rider Account</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or">or</string>
    <string name="signup_phone_number">Signup with phone number</string>
    <string name="login_phone_number">Login with phone number</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_you_have_account">Don\'t have an account? Signup now</string>
    <string name="logging_in">Loggin in</string>
    <string name="next">Next</string>
    <string name="hello_text">Hello, nice to meet you!</string>
    <string name="most_comfort_text">Most comfort journy for you.</string>
    <string name="enter_phone_number">Enter Your Mobile Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="back">Back</string>
    <string name="creating_account">Creating your account</string>
    <string name="loading">Loading</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="enter_otp_code">Enter your OTP code below.</string>
    <string name="resend_otp_again">resend code</string>
    <string name="verifying_otp_code">Verifying OTP</string>
    <string name="otp_code">OTP Code</string>
    <string name="enter_email">Enter your email address</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="driver_signup_text">Want to be a Driver? Signup now</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="driver_registration">Driver Registration</string>
    <string name="upload_car_image">Please upload an image of your transportation method</string>
    <string name="provide_car_description">Please provide a description of your transportation method</string>
    <string name="description">Description</string>
    <string name="signup">Signup</string>
    <string name="logout">Log out</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="vehicle_description">Vehicle Description</string>
    <string name="logging_out">Logging out</string>
    <string name="login_driver">Login as driver</string>
    <string name="driver_login">Driver Login</string>
    <string name="deleting_account">Deleting your account</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="enter_destination">Enter a Destination</string>
    <string name="search">Search</string>
    <string name="destination">Destination</string>
    <string name="cancel">Cancel</string>
    <string name="looking_for_drivers">Looking For Drivers ...</string>
    <string name="select_driver">Select Driver</string>
    <string name="request_ride">Request Ride</string>
    <string name="you_have_arrived">You have arrived</string>
    <string name="return_to_dashboard">Return to dashboard</string>
    <string name="select_location">Select Location</string>
    <string name="pick_up">pick up</string>
    <string name="drop_off">drop off</string>
    <string name="finish_ride">Finish Ride</string>
    <string name="selecting_driver">Selecting Driver</string>
    <string name="finishing_ride">Finishing Ride</string>
    <string name="looking_for_riders">Looking For Drivers ...</string>
    <string name="retry">Retry</string>
    <string name="no_rides">"No Riders Available Currently "</string>
    <string name="pick_up_rider">Pick up rider</string>
    <string name="set_active">Set Active</string>
    <string name="active">active</string>

</resources>