<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.RiderDashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <androidx.cardview.widget.CardView
                    android:id="@+id/profile_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@color/light_grey" />

                </androidx.cardview.widget.CardView>
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/riders_search_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical"
            android:weightSum="2">


            <LinearLayout
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"

                >


                <ProgressBar
                    android:id="@+id/progress_bar_0"
                    android:layout_width="100dp"
                    android:layout_height="100dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/looking_for_riders"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/no_rides"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/retry_button"
                    style="@style/greenButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/retry" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/common_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">



            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent">


                <LinearLayout
                    android:id="@+id/address_search_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/enter_destination"
                        android:textSize="30sp"
                        android:textStyle="bold" />


                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:drawablePadding="5dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/pick_up"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="top|left"
                                    android:hint="@string/pick_up"
                                    android:imeOptions="actionSearch"
                                    android:inputType="textCapWords" />

                            </com.google.android.material.textfield.TextInputLayout>


                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="20dp"
                                android:drawablePadding="5dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/drop_off"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="top|left"
                                    android:hint="@string/drop_off"
                                    android:imeOptions="actionSearch"
                                    android:inputType="textCapWords" />

                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>


                    </RelativeLayout>


                    <Button
                        android:id="@+id/request_ride"
                        style="@style/greenButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="80dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginRight="30dp"
                        android:text="@string/request_ride" />

                </LinearLayout>


            <LinearLayout
                    android:id="@+id/select_rider_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ListView
                            android:id="@+id/list_view"
                            android:layout_width="match_parent"
                            android:layout_height="240dp"
                            android:visibility="gone" />

                        <LinearLayout
                            android:id="@+id/vehicle_info"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="20dp"
                            android:gravity="left|start"
                            android:orientation="horizontal"
                            android:padding="10dp">


                            <androidx.cardview.widget.CardView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_margin="3dp"
                                app:cardCornerRadius="10dp">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent">


                                    <ImageView
                                        android:id="@+id/car_image"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:scaleType="centerCrop" />


                                </RelativeLayout>

                            </androidx.cardview.widget.CardView>


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:orientation="vertical">


                                <TextView
                                    android:id="@+id/rider_name"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:textSize="18sp"
                                    android:textStyle="bold"
                                    tools:text="Rider Name" />

                                <TextView
                                    android:id="@+id/description"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    tools:text="pick up destination \n \n drop down destination"
                                    />


                            </LinearLayout>


                        </LinearLayout>



                    </LinearLayout>

                    <Button
                        android:id="@+id/select_rider_button"
                        style="@style/greenButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="20dp"
                        android:drawableLeft="@drawable/select"
                        android:gravity="start|center_vertical"
                        android:text="@string/pick_up_rider" />

                    <Button
                        android:id="@+id/cancel"
                        style="@style/redButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:gravity="center"
                        android:text="@string/cancel" />



                    <LinearLayout
                        android:id="@+id/arrived_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone">


                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="15dp"
                            android:background="@color/gray" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/you_have_arrived"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/return_dashboard"
                            style="@style/outlineButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="20dp"
                            android:text="@string/return_to_dashboard"
                            android:textAllCaps="true" />


                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/progress_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/looking_for_drivers"
                        android:textSize="30sp" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>